src/tests/test-src/errors/E69-mod-read.syntran
// E69: mod-read
// A used module file was found but could not be read (e.g. it's a
// directory)

use dir_mod;
